# frames

framecraft/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
framecraft/docs/: framecraft-overview.html
framecraft/scripts/: gen_block_ids.py  perf_harness.py  record_fixture.py
framecraft/src/framecraft/: __init__.py  _block_ids.py  _compat.py  assembler.py  brand.py  cli.py  cli_catalog.py  cli_compose.py  cli_doctor.py  cli_from_plan.py  cli_preview.py  cli_render.py  config.py  director.py  exit_codes.py  lint.py  lint_policy.py  music.py  observability.py  registry.py  scaffold.py  schema.py  story_bible.py  subprocess_helpers.py  trace.py  trace_rates.py
framecraft/src/framecraft/blocks/: __init__.py  _spec.py  end_card.py  gradient_bg.py  grain_overlay.py  lower_third.py  title_card.py
framecraft/src/framecraft/prompts/: __init__.py  primer.lock.json  primer.md
framecraft/src/framecraft/providers/: __init__.py  anthropic.py  base.py  gemini.py  stub.py
framecraft/src/framecraft/rendering/: __init__.py  audio.py  catalog.py  html_walker.py  ids.py  llm_author.py  native.py  rich_fallback.py  root.py
framecraft/tests/: conftest.py  test_assembler.py  test_blocks_smoke.py  test_cli_compose.py  test_cli_doctor.py  test_cli_from_plan.py  test_cli_preview.py  test_cli_render.py  test_config.py  test_determinism.py  test_director.py  test_goldens.py  test_lint_policy.py  test_lint_repair.py  test_music.py  test_providers.py  test_registry.py  test_scaffold.py  test_schema.py  test_trace_observability.py
framecraft/tests/fixtures/plans/: product-promo.json
framecraft/tests/goldens/data-explainer/: situation.txt
(+92 files in other folders)
